--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frixuelos Recipe</title>
-    <link href="/assets/styles/styles.css" rel="stylesheet">
+    <link href="assets/styles/styles.css" rel="stylesheet">
 </head>
 <body>
 
